# micro-liquid

./: CHANGELOG.md  README.md  micro_liquid.py  pyproject.toml
tests/: test_compound_expressions.py  test_for_tag.py  test_if_tag.py  test_output.py  test_syntax_errors.py  test_whitespace_control.py
