[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "micro-liquid"
description = 'Minimal Liquid-like templating'
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "James Prior", email = "jamesgr.prior@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jg-rp/micro-liquid#readme"
Issues = "https://github.com/jg-rp/micro-liquid/issues"
Source = "https://github.com/jg-rp/micro-liquid"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.envs.dev]
extra-dependencies = ["mypy>=1.0.0", "ruff", "pytest"]

[tool.hatch.envs.dev.scripts]
test = "pytest {args}"
typing = "mypy"
lint = "ruff check ."

[tool.mypy]
files = "micro_liquid.py"
python_version = "3.10"
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
local_partial_types = true
no_implicit_reexport = true
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false
warn_return_any = true
warn_unreachable = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "BLE",
  "C4",
  "E",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PIE",
  "PL",
  "PT",
  "Q",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "FBT003"]
